# Antonius-GameTemplate

./: .gitignore  CMakeLists.txt  README.md
Characters/: CMakeLists.txt  CharacterBase.h  CharacterNPC.h  CharacterPlayer.h
Editor/: CMakeLists.txt
Editor/UI/: CMakeLists.txt  WorldEditorGUI.cpp  WorldEditorGUI.h
Effects/: CMakeLists.txt  StatusEffectBase.h
Logistics/: CMakeLists.txt  Currency.h  StatBlock.h
Objects/: CMakeLists.txt
Objects/Equipment/: ArmorBase.h  CMakeLists.txt  EquipmentBase.h  WeaponBase.h
Professions/: ProfessionBase.cpp
Skills/: SkillBase.cpp  SkillBase.h  WeaponSkill.cpp  WeaponSkill.h
Toolkit/: CMakeLists.txt  Time.cpp
doc/concept/: README.txt  concept.idx  concept.ilg  concept.out  concept.tex
doc/concept/TeX_files/: chapter.tex  frontmatter.tex
resources/: resources.txt
